<resources>
    <string name="app_name">Android-test-Parse</string>
    <string name="textview">TextView</string>


    <string name="share">share</string>
    <string name="username">Username</string>
    <string name="signup">SignUp</string>
    <string name="or">-------------OR---------------</string>

    <string name="password">Password</string>
    <string name="todo">TODO</string>

    <string name="login">login</string>


</resources>